# ubinos_base

app/helloworld_c/: main.c
app/helloworld_c_on_host_01/: CMakeLists.txt
app/helloworld_cpp/: CMakeLists.txt  main.cpp
app/helloworld_python/: CMakeLists.txt  description.rst  main.py
app/helloworld_python_on_host_01/: CMakeLists.txt
common/: common_c_cpp_native_common_post.cmake  common_c_cpp_native_common_pre.cmake  common_c_cpp_native_local_post.cmake  common_c_cpp_native_local_pre.cmake  common_c_cpp_native_remote_post.cmake  common_config.cmake  common_doc.cmake  common_doc_html.cmake  common_doc_latexpdf.cmake  common_docker.cmake  common_python_common_post.cmake  common_python_common_pre.cmake  common_python_local_post.cmake  common_python_local_pre.cmake  common_python_remote_post.cmake  common_ubinos_common_post.cmake  common_ubinos_common_pre.cmake  common_ubinos_local_post.cmake  common_ubinos_local_pre.cmake
